refactor: rename section to 'Indicateurs'
- Changed section title from 'Analyse des Coûts de Revient' to 'Indicateurs'
- More concise and clear naming for the analytics dashboard

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                 <div id="couts" class="tab-content">
                     <div class="section">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-                            <h3>💰 Analyse des Coûts de Revient</h3>
+                            <h3>📊 Indicateurs</h3>
                             <button class="btn" onclick="actualiserCouts()" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); padding: 10px 20px;">
                                 🔄 Actualiser les calculs
                             </button>
